--- a/Comparisons.html
+++ b/Comparisons.html
@@ -54,39 +54,36 @@
         <div class="row flex">
           <div class="col-md-6 ml-sm-auto px-md-4">
             <a class="nav-link" href="Latitude_vs_MaxTemp.html">
+              vs. Maximum Temperature
               <img class="img-thumbnail" src="assets\images\Latitude_vs_MaxTemp.png">
-              Maximum Temperature
             </a>
           </div>
           <div class="col-md-6 ml-sm-auto px-md-4">
             <a class="nav-link" href="Latitude_vs_Humidity.html">
+              vs. Humidity
               <img class="img-thumbnail" src="assets\images\Latitude_vs_Humidity.png">
-              Humidity
             </a>
           </div>
         </div>
         <div class="row flex">
           <div class="col-md-6 ml-sm-auto px-md-4">
             <a class="nav-link" href="Latitude_vs_Cloudiness.html">
+              vs. Cloudiness
               <img class="img-thumbnail" src="assets\images\Latitude_vs_Cloudiness.png">
-              Cloudiness
             </a>
           </div>
           <div class="col-md-6 ml-sm-auto px-md-4">
             <a class="nav-link" href="Latitude_vs_WindSpeed.html">
+              vs. Wind Speed
               <img class="img-thumbnail" src="assets\images\Latitude_vs_WindSpeed.png">
-              Wind Speed
             </a>
           </div>
         </div>
       </div>
     </main>
-
-
     <div>
       <br>
     </div>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
