--- a/Data.html
+++ b/Data.html
@@ -48,20 +48,21 @@
     <div class="container-fluid">
       <div class="row flex-nowrap border-topc mx-5">
 
-<table class="table table-striped table-hover">
+
+<table class="table table-striped table-hover table-responsive">
 <thead>
-<tr>
-<th title="Field #1" scope="col">City_ID</th>
-<th title="Field #2" scope="col">City</th>
-<th title="Field #3" scope="col">Cloudiness</th>
-<th title="Field #4" scope="col">Country</th>
-<th title="Field #5" scope="col">Date</th>
-<th title="Field #6" scope="col">Humidity</th>
-<th title="Field #7" scope="col">Lat</th>
-<th title="Field #8" scope="col">Lng</th>
-<th title="Field #9" scope="col">Max Temp</th>
-<th title="Field #10" scope="col">Wind Speed</th>
-</tr>
+  <tr>
+    <th title="Field #1" scope="col">City_ID</th>
+    <th title="Field #2" scope="col">City</th>
+    <th title="Field #3" scope="col">Cloudiness</th>
+    <th title="Field #4" scope="col">Country</th>
+    <th title="Field #5" scope="col">Date</th>
+    <th title="Field #6" scope="col">Humidity</th>
+    <th title="Field #7" scope="col">Lat</th>
+    <th title="Field #8" scope="col">Lng</th>
+    <th title="Field #9" scope="col">Max Temp</th>
+    <th title="Field #10" scope="col">Wind Speed</th>
+  </tr>
 </thead>
 <tbody>
 <tr>
