Changing the webpage title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
-    <title>Hello, world!</title>
+    <title>Latitude and Weather</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
